HelloUltraviolet/Fixtures/RejectedSource/Patterns/IfCaseUnionNonExhaustive/Expected.uv
//! Expected diagnostic metadata for the IfCaseUnionNonExhaustive rejected-source specimen.

expectedDiagnostic("E-SEM-2705", "rule.17.IfCase-Union-NonExhaustive")
